# goit-pythonweb-hw-02

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
postgres-data/base/16384/: pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
